<?xml version = "1.0" encoding = "utf-8"?>
<resources>
    <string name = "app_name">dicoding jetpack second submition</string>
    <string name = "tab_title_movie">Movies</string>
    <string name = "tab_title_tvshow">TV Shows</string>
    <string name = "toolbar_title_detail_movie">Detail Movie</string>
    <string name = "toolbar_title_detail_tvshow">Detail TV Show</string>
    <string name = "desc_image_highlight">Image Highlight</string>
    <string name = "lb_description">Description</string>
    <string name="name">Data Name</string>
</resources>
