<?xml version = "1.0" encoding = "utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    tools:context = ".ui.home.content.movie.MovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width = "0dp"
        android:layout_height = "0dp"
        android:id = "@+id/rv_movie"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        tools:listitem = "@layout/item_row_data" />

</androidx.constraintlayout.widget.ConstraintLayout>